Add many to many relationship